# OOP

hospital/: CMakeLists.txt  doctors.txt  domain.cpp  domain.h  main.cpp  observer.h  patients.txt  repository.cpp  repository.h  window.cpp  window.h
